2009-07-27  Larry Ewing  <lewing@novell.com>

	* uielement.cpp (GetTransformToUIElementWithError): signal and
	error in the to_element doesn't have a Surface case.

2009-07-26  Larry Ewing  <lewing@novell.com>

	* rect.h: make PointInside inclusive on the top/left.

2009-07-24  Larry Ewing  <lewing@novell.com>

	* textblock.cpp:  Rework the bounds computation to be the max of
	the actual and the framework element settings.  Fixes DRT #245.

2009-07-24  Larry Ewing  <lewing@novell.com>

	* border.cpp: Apply the default constraints more carefully.

	* src/frameworkelement.cpp, src/frameworkelement.h: add
	ApplySizeContraints method, use it.

	* src/canvas.cpp:
	* src/shape.cpp:
	* src/textblock.cpp:
	* src/usercontrol.cpp: use ApplySizeContraints method.

2009-07-24  Larry Ewing  <lewing@novell.com>

	Rename some of the layout information based on some
	of the tests.

2009-07-24  Jeffrey Stedfast  <fejj@novell.com>

	* textbox.cpp (TextBoxBase::OnPropertyChanged): When our
	width/height properties change, pass those values along to our
	TextBoxView as well.

2009-07-24  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: Instead of cloning the element set it's namescope
	explicitly so it doesn't get registered in another namescope when
	it is used as a property of an element in another namescope.

2009-07-23  Jeffrey Stedfast  <fejj@novell.com>

	* downloader.cpp (same_domain): Fixed to be safe if/when a uri
	host is NULL.

2009-07-23  Alan McGovern  <amcgovern@novell.com>

	* animation.cpp: If the initial value is null, create a Value
	with the correct type with IsNull set to true.

2009-07-23  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: If we are getting a named item from the app resources
	we should clone it since it comes from a different namescope. This
	allows you to have named items in app.resources be referenced in
	control code as a static resource even if it has the same name as
	an object in the control code.
