@@ -1,3 +1,8 @@
+2009-07-27  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* application.cpp: GetResource: set the notify_size callback
+	on the downloader too. Media must known the size whenever possible.
+
 2009-07-27  Larry Ewing  <lewing@novell.com>
 
 	* uielement.cpp (GetTransformToUIElementWithError): signal and
